@@ -1,3 +1,8 @@
+2007-09-12  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Cecil.Binary/ImageReader.cs: some 64bits assemblies
+	have a strange header without import tables.
+
 2007-09-09  Jb Evain  <jbevain@novell.com>
 
 	* Mono.Cecil/GenericContext.cs
